<resources>
    <string name="app_name">Cashlez Lib</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="amount">Amount</string>
    <string name="pay">Pay</string>
    <string name="description">Description</string>
    <string name="merchant_transaction_id">Merchant Transaction ID</string>
    <string name="cool_shop">Cool Shop</string>
    <string name="void_trx_id">Void Transaction ID</string>
    <string name="btn_void">Void</string>
    <string name="email">Email</string>
    <string name="handphone_no">No. Handphone</string>
    <string name="connect">Konek</string>
    <string name="cash">Cash</string>
    <string name="check_reader">Check Reader</string>
    <string name="trans_history">Trans. Histori</string>
    <string name="payment_cap">Payment Capability</string>
    <string name="comp_list">Comp. List</string>
    <string name="login">Login</string>
    <string name="pin">PIN</string>
    <string name="user_name">User name</string>
    <string name="handshake">Handshake</string>
    <string name="activation_code">Activation code</string>
    <string name="activate">Aktivasi</string>
    <string name="credit_pin">Credit Pin</string>
    <string name="debit_pin">Debit PIN</string>
    <string name="credit_sign">Credit Signature</string>
    <string name="debit_signature">Debit Sign</string>
    <string name="log_out">Log out</string>
    <string name="trans_history_more">Trans Hist More</string>
    <string name="trans_history_detail">History Detail</string>
    <string name="void_user">User for void</string>
    <string name="void_password">Password for void</string>
    <string name="print">Print</string>
    <string name="print_cash">Cetak Cash</string>
    <string name="print_credit">Cetak Credit</string>
    <string name="close_printer">Close Printer</string>
    <string name="send_receipt">Send Receipt</string>
    <string name="cpayment">CPayment®</string>
    <string name="preparing">Preparing…</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cpayment_is_here">Your payment solution\nin your pocket&#8482;</string>
    <string name="forgot_password">Forgot your pin?</string>
    <string name="powered_by">Powered by Cashlez®</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="phone_no">Phone no</string>
    <string name="payment">Payment</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="card_no">Card no</string>
    <string name="approval_code">Approval code</string>
    <string name="trace_no">Trace no</string>
    <string name="transaction_date">Transaction date</string>
    <string name="transaction_time">Transaction time</string>
    <string name="void_transaction">Void Payment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="please_input_to_proceed">Complete to Proceed</string>
    <string name="search_title">Search</string>
    <string name="upload">Upload</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="search_payment">Search Payment</string>
    <string name="invoice_no">Invoice no</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="change_password">Change Password</string>
    <string name="process">Process</string>
    <string name="send_message">Send Message</string>
    <string name="permission_message">Please allow permissions</string>
    <string name="pinless">Pinless</string>
    <string name="aggregator_id">Aggregator id</string>
    <string name="print_free_text">Print Free Text</string>
    <string name="register">Register</string>
    <string name="full_username">User full name.</string>
    <string name="handphone_prefix">08</string>
    <string name="login_username">Username</string>
    <string name="check_user_name">Check username</string>
    <string name="id_card">KTP</string>
    <string name="id_card_upload">Upload KTP</string>
    <string name="tax_card">NPWP</string>
    <string name="tax_card_upload">Upload NPWP</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select">Select</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address_1">Address one</string>
    <string name="address_2">Address two</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="merchant_name">Merchant name</string>
    <string name="business_category">Business category</string>
    <string name="insurance">Insurance</string>
    <string name="phone_prefix">08</string>
    <string name="address_same">Address same?</string>
    <string name="business_address">Business address</string>
    <string name="business_address_2">Business address two</string>
    <string name="account_number">Account number</string>
    <string name="select_date">Select date</string>
    <string name="get_account_name">Get account name</string>
    <string name="error_load_history_retry">Error while loading history. Click here to retry</string>
    <string name="error_load_history">Error while loading history</string>
    <string name="dummy_user_name">Card holder name</string>
    <string name="sale">Sale</string>
    <string name="ref_no">Reff No.</string>
    <string name="tc">TC</string>
    <string name="voided_date">Voided date</string>
    <string name="voided_by">Voided by</string>
    <string name="merchant_id_full">MID</string>
    <string name="tid">TID</string>
    <string name="deskripsi">Description</string>
    <string name="product_picture">Payment Picture</string>
    <string name="batch_no">Batch No</string>
    <string name="payment_url">Payment url</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="sms">SMS</string>
    <string name="other">Other</string>
    <string name="cashlezlink">Cashlez Link</string>
    <string name="not_found">Application not found</string>
    <string name="please_choose_application">Please choose application</string>
    <string name="cashlez_link_email_subject">Cashlez link payment</string>
    <string name="choose_sms_client">Choose email application</string>
    <string name="check_transaction">Check Invoice</string>
    <string name="cancel_transaction">Cancel Invoice</string>
    <string name="pay_by_qr_info">Pay by qr info</string>
    <string name="pay_by_qr">Pay By Qr</string>
    <string name="installment">Installment</string>
    <string name="save">Save</string>
    <string name="reader_connection_status">Reader connection status</string>
    <string name="printer_connection_status">Printer connection status</string>
    <string name="check_printer">Check Printer</string>
    <string name="check_valid_reader">Check\nValid Reader</string>
    <string name="free_text_new">Print Free Text\nnew activity</string>
    <string name="qr_payment">Get QR</string>
    <string name="check_tcash_status">Check\nTCash Payment</string>
    <string name="print_qr">Print\nTCash QR</string>
    <string name="pay_by_qr_new">Get QR\nNew Activity</string>
    <string name="check_dimo_status">Check\nDimo Status</string>
    <string name="cancel_dimo">Cancel Dimo</string>
    <string name="dimo_new_activity">Dimo\nNew Activity</string>

    <string name="check_mandiripay_status">Check\nMandiri Pay Status</string>
    <string name="cancel_mandiripay">Cancel Mandiri Pay</string>
    <string name="mandiripay_new_activity">Mandiri Pay\nNew Activity</string>

    <string name="tcash">TCash</string>
    <string name="dimo">Dimo</string>
    <string name="mandiripay">Mandiri Pay</string>

    <string name="tcash_new_activity">TCash\nNew Activity</string>
    <string name="print_tcash">Print\nTCash QR</string>
    <string name="print_dimo">Print\nDimo Receipt</string>
    <string name="print_dimo_qr">Print\nDimo QR</string>

    <string name="print_mandiripay">Print\nMandiri Pay Receipt</string>
    <string name="print_mandiripay_qr">Print\nMandiri Pay QR</string>

    <string name="invoice_and_approval">Invoice and approval code</string>
    <string name="date_format">2017-11-23</string>
    <string name="reset_search_payment">Reset search payment</string>
    <string name="valid_email">Valid email</string>
    <string name="valid_phone_no">Valid phone no</string>
    <string name="debit_transfer">Debit Transfer</string>
    <string name="debit_transfer_new_activity">Debit Transfer\nNew Activity</string>
    <string name="print_debit_transfer">Print Debit Transfer</string>
    <string name="debit_transfer_not_supported">Debit transfer is not supported</string>
    <string name="local_pin">Local card\nPIN</string>
    <string name="local_no_pin">Local card\nNo PIN</string>
    <string name="international_card">International\ncard</string>
</resources>
