<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_pin_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/landing_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount"
                            android:inputType="number"
                            android:maxLines="1"
                            android:text="100" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:scrollbars="vertical"
                        app:counterEnabled="true"
                        app:counterMaxLength="250">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/landing_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/description"
                            android:maxLines="5"
                            android:minLines="5"
                            android:text="Test transaction calling Cashlez Lib" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/landing_upload"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:onClick="goUpload"
                        android:text="@string/upload" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/landing_reader_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/reader_connection_status" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/landing_printer_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/printer_connection_status" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/landing_pay"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:onClick="goPay"
                        android:text="@string/pay" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/landing_check_reader"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:onClick="goCheckReader"
                        android:text="@string/check_reader" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/landing_check_printer"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:onClick="goCheckPrinter"
                        android:text="@string/check_printer" />
                </LinearLayout>

                <include layout="@layout/loading_view" />
            </FrameLayout>
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/landing_fab"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="doGetHistoryList"
        app:srcCompat="@drawable/ic_control_point_black_24dp" />

</android.support.design.widget.CoordinatorLayout>
